--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 
 }
 h1{
@@ -8,22 +9,65 @@ h1{
 span{
     color: orange;
 }
-section{
+.morgi{
     display: flex;
+    margin-bottom: 100px;
 }
 .half{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 2%;
 }
 .half img{
     width: 80%;
 }
 .link{
     text-decoration: none;
-    background-color:tomato;
-border:1px solid white ;
-    border-radius:5px ;
-    padding:3px 10px
-
+  background-image: linear-gradient(orange,tomato);
+   padding: 10px 40px;
+   border-radius: 5px;
+   color: white;
+   font-weight: 700;
     
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
+}
+.url{
+    text-decoration: none;
+    background-image: linear-gradient(orange,tomato);
+    padding: 10px 40px;
+    border-radius:5px ;
+    color:white;
+    font-weight: 700;
+
+}
+.dream{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.pro{
+    box-shadow: 10px 10px  30px black;
+    margin-left: 50px;
+    margin-right: 50px;
+    border-radius: 5px;
+}
+.expeience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+#ko{
+    border-image: linear-gradient(blue,cyan);
+    border-left: 7px solid;
+    border-image-slice: 1;
+}
+#rata{
+    border-image: linear-gradient(orange,red);
+    border-left: 7px solid;
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
